--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "test": "set -e; for t in test/*.js; do node $t; done"
   },
   "bin": {
-    "npm-ls": "./index.js"
+    "lmod": "./index.js"
   },
   "author": "Dominic Tarr <dominic.tarr@gmail.com> (http://dominictarr.com)",
   "license": "MIT",
