--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "type": "git",
     "url": "git://github.com/dominictarr/ls-modules.git"
   },
-  "dependencies": {},
+  "dependencies": {
+    "tablify": "0.0.1"
+  },
   "devDependencies": {},
   "scripts": {
     "test": "set -e; for t in test/*.js; do node $t; done"
